--- a/index.html
+++ b/index.html
@@ -1,18 +1,139 @@
----
-layout: default
-description: "An easy-to-read, quick reference for PHP best practices, accepted coding standards, and links to authoritative PHP tutorials around the Web"
----
+<!DOCTYPE html>
+<html>
 
-{% capture welcome_content %}{% include welcome.md %}{% endcapture %}
-{{ welcome_content|markdownify }}
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Php-the-right-way : An easy-to-read, quick reference for PHP best practices, accepted coding standards, and links to authoritative tutorials around the Web" />
 
-{% capture backtotop %}[กลับขึ้นด้านบน](#top){.top}{% endcapture %}
-{% for post in site.posts reversed %}
-    {% if post.isChild != true and loop.first != true %}
-    {{ backtotop|markdownify }}
-    {% endif %}
-    <div id="{{ post.title | downcase | replace:' ','_' | replace:'(','' | replace:')','' | replace:'.','' | replace:'-','' }}">
-    {{ post.content }}
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Php-the-right-way</title>
+  </head>
+
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/pittaya/php-the-right-way">View on GitHub</a>
+
+          <h1 id="project_title">Php-the-right-way</h1>
+          <h2 id="project_tagline">An easy-to-read, quick reference for PHP best practices, accepted coding standards, and links to authoritative tutorials around the Web</h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/pittaya/php-the-right-way/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/pittaya/php-the-right-way/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
     </div>
-{% endfor %}
-{{ backtotop|markdownify }}
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h1>
+<a name="php-the-right-way" class="anchor" href="#php-the-right-way"><span class="octicon octicon-link"></span></a>PHP: The Right Way</h1>
+
+<h2>
+<a name="overview" class="anchor" href="#overview"><span class="octicon octicon-link"></span></a>Overview</h2>
+
+<p>This is the GitHub Pages repository for the <em>PHP: The Right Way</em> project.</p>
+
+<ul>
+<li>This website is a Jekyll project.</li>
+<li>Each section and sub-section are a Markdown file in <code>_posts/</code>.</li>
+<li>Sub-sections have <code>isChild: true</code> in their front matter.</li>
+<li>The navigation and page structure are automatically generated.</li>
+</ul><h2>
+<a name="spread-the-word" class="anchor" href="#spread-the-word"><span class="octicon octicon-link"></span></a>Spread the Word!</h2>
+
+<p><em>PHP: The Right Way</em> has web banner images you can use on your website. Show your support, and let new PHP
+developers know where to find good information!</p>
+
+<p><a href="http://www.phptherightway.com/banners.html">See Banner Images</a></p>
+
+<h2>
+<a name="how-to-contribute" class="anchor" href="#how-to-contribute"><span class="octicon octicon-link"></span></a>How to Contribute</h2>
+
+<ol>
+<li>Fork and edit</li>
+<li>Optionally install <a href="https://rvm.io/rvm/install/">Ruby</a> with <a href="https://github.com/mojombo/jekyll/">Jekyll</a> gem to preview locally</li>
+<li>Submit pull request for consideration</li>
+</ol><h3>
+<a name="contributor-style-guide" class="anchor" href="#contributor-style-guide"><span class="octicon octicon-link"></span></a>Contributor Style Guide</h3>
+
+<ol>
+<li>Use American English spelling (<em>primary English repo only</em>)</li>
+<li>Use four (4) spaces to indent text; do not use tabs.</li>
+<li>Wrap all text to 120 characters.</li>
+<li>Code samples should adhere to PSR-1 or higher.</li>
+</ol><h2>
+<a name="where" class="anchor" href="#where"><span class="octicon octicon-link"></span></a>Where</h2>
+
+<p><a href="http://www.phptherightway.com">http://www.phptherightway.com</a></p>
+
+<ul>
+<li><a href="http://www.phptherightway.com">English</a></li>
+<li><a href="http://ca.phptherightway.com">Catalan</a></li>
+<li><a href="http://wulijun.github.com/php-the-right-way">Chinese</a></li>
+<li><a href="http://ja.phptherightway.com">Japanese</a></li>
+<li><a href="http://wafe.github.io/php-the-right-way">Korean</a></li>
+<li><a href="http://it.phptherightway.com">Italian</a></li>
+<li><a href="http://pl.phptherightway.com">Polish</a></li>
+<li><a href="http://br.phptherightway.com">Portuguese</a></li>
+<li><a href="http://getjump.github.io/ru-php-the-right-way">Russian</a></li>
+<li><a href="http://es.phptherightway.com">Spanish</a></li>
+<li><a href="http://iflista.github.com/php-the-right-way">Ukrainian</a></li>
+<li><a href="http://bg.phptherightway.com">Bulgarian</a></li>
+<li><a href="http://rwetzlmayr.github.io/php-the-right-way">German</a></li>
+<li><a href="http://hkulekci.github.io/php-the-right-way/">Turkish</a></li>
+</ul><h3>
+<a name="translations" class="anchor" href="#translations"><span class="octicon octicon-link"></span></a>Translations</h3>
+
+<p>If you are interested in translating <em>PHP: The Right Way</em>, fork this repo on GitHub and publish your localized fork to your own GitHub Pages account. We'll link to your translation from the primary document.</p>
+
+<p>To avoid fragmentation and reader confusion, please choose one of these options:</p>
+
+<ol>
+<li>We link to your GitHub Pages fork with <code>[username].github.com/php-the-right-way</code>
+</li>
+<li>We link to your GitHub Pages fork with a subdomain (e.g. "ru.phptherightway.com")</li>
+</ol><p>If you use a subdomain, enter the subdomain into the <code>CNAME</code> file, and ask us to setup DNS for you. If you do not use a subdomain, remove the <code>CNAME</code> file entirely else your fork will not build when pushed.</p>
+
+<p>When your translation is ready, open an issue on the Issue Tracker to let us know.</p>
+
+<h2>
+<a name="why" class="anchor" href="#why"><span class="octicon octicon-link"></span></a>Why</h2>
+
+<p>There's been a lot of discussion lately about how the PHP community lacks sufficient, credible information for programmers new to PHP. This repository aims to solve this problem.</p>
+
+<h2>
+<a name="who" class="anchor" href="#who"><span class="octicon octicon-link"></span></a>Who</h2>
+
+<p>My name is <a href="http://twitter.com/codeguy">Josh Lockhart</a>. I'm the author of the <a href="http://www.slimframework.com/">Slim Framework</a>, and I work for <a href="http://www.newmediacampaigns.com/">New Media Campaigns</a>.</p>
+
+<h3>
+<a name="collaborators" class="anchor" href="#collaborators"><span class="octicon octicon-link"></span></a>Collaborators</h3>
+
+<ul>
+<li><a href="http://krisjordan.com/">Kris Jordan</a></li>
+<li><a href="http://philsturgeon.co.uk/">Phil Sturgeon</a></li>
+</ul><h2>
+<a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
+
+<p><a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a></p>
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Php-the-right-way maintained by <a href="https://github.com/pittaya">pittaya</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
+
+  </body>
+</html>
